@@ -1,3 +1,7 @@
+2003-06-09  David Sterba  <dave@jikos.cz>
+
+	* key.c (correct_key_code): Treat Shift-Backspace as Backspace.
+
 2003-06-06  Pavel Roskin  <proski@gnu.org>
 
 	* util.h: Add new match_type - match_regex.
